Checkstyle + Errorprone